[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analysis-tool"
version = "1.0.0"
description = "Data Sanitization and Exploration Engine"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "E23026" }
]

dependencies = [
    "numpy>=1.21",
    "pandas>=2.0",
    "plotly>=5.0",
    "scikit-learn>=1.0",
    "scipy>=1.10"
]

[project.urls]
Repository = "https://github.com/E23026/data-analysis-tool"

[tool.setuptools]
packages = ["data_analysis"]
